--- a/practice/express01/views/layouts/main.handlebars
+++ b/practice/express01/views/layouts/main.handlebars
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Piddy Widdy</title>
+    <title>Still In Diapers</title>
   </head>
 
   <body background="/nois.png">
