Added HTML code to make web pages render in portable device friendly manner.

--- a/practice/express01/views/layouts/main.handlebars
+++ b/practice/express01/views/layouts/main.handlebars
@@ -1,5 +1,7 @@
 <!doctype html>
 <html>
+  <!-- Make pages portable device friendly. -->
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <head>
     <title>Still In Diapers</title>
   </head>
